clang-error.txt
/home/richie/Downloads/JetBrains/clion-2017.1.2/bin/cmake/bin/cmake --build /home/richie/Documents/rgkirch/Hacker-HUD/cmake-build-debug --target hhTest -- -j 4
[ 16%] Built target gtest
[ 41%] Built target gmock
[ 58%] Built target gtest_main
[ 66%] Building CXX object test/CMakeFiles/hhTest.dir/myConcreteConnectionTest.cpp.o
In file included from /home/richie/Documents/rgkirch/Hacker-HUD/test/googletest/googlemock/include/gmock/gmock.h:58:0,
                 from /home/richie/Documents/rgkirch/Hacker-HUD/test/myConcreteConnectionTest.cpp:2:
/home/richie/Documents/rgkirch/Hacker-HUD/test/googletest/googlemock/include/gmock/gmock-actions.h: In instantiation of ‘testing::internal::ReturnAction<R>::Impl<R_, F>::Impl(const testing::internal::linked_ptr<T>&) [with R_ = testing::PolymorphicAction<testing::internal::InvokeWithoutArgsAction<downloadData_basic_Test::TestBody()::<lambda()> > >; F = int(); R = testing::PolymorphicAction<testing::internal::InvokeWithoutArgsAction<downloadData_basic_Test::TestBody()::<lambda()> > >]’:
/home/richie/Documents/rgkirch/Hacker-HUD/test/googletest/googlemock/include/gmock/gmock-actions.h:557:44:   required from ‘testing::internal::ReturnAction<R>::operator testing::Action<Func>() const [with F = int(); R = testing::PolymorphicAction<testing::internal::InvokeWithoutArgsAction<downloadData_basic_Test::TestBody()::<lambda()> > >]’
/home/richie/Documents/rgkirch/Hacker-HUD/test/myConcreteConnectionTest.cpp:38:8:   required from here
/home/richie/Documents/rgkirch/Hacker-HUD/test/googletest/googlemock/include/gmock/gmock-actions.h:577:39: error: no matching function for call to ‘ImplicitCast_(testing::PolymorphicAction<testing::internal::InvokeWithoutArgsAction<downloadData_basic_Test::TestBody()::<lambda()> > >&)’
           value_(ImplicitCast_<Result>(value_before_cast_)) {}
                                       ^
In file included from /home/richie/Documents/rgkirch/Hacker-HUD/test/googletest/googletest/include/gtest/internal/gtest-internal.h:40:0,
                 from /home/richie/Documents/rgkirch/Hacker-HUD/test/googletest/googletest/include/gtest/gtest.h:58,
                 from /home/richie/Documents/rgkirch/Hacker-HUD/test/myConcreteConnectionTest.cpp:1:
/home/richie/Documents/rgkirch/Hacker-HUD/test/googletest/googletest/include/gtest/internal/gtest-port.h:1377:11: note: candidate: template<class To> To testing::internal::ImplicitCast_(To)
 inline To ImplicitCast_(To x) { return x; }
           ^
/home/richie/Documents/rgkirch/Hacker-HUD/test/googletest/googletest/include/gtest/internal/gtest-port.h:1377:11: note:   template argument deduction/substitution failed:
In file included from /home/richie/Documents/rgkirch/Hacker-HUD/test/googletest/googlemock/include/gmock/gmock.h:58:0,
                 from /home/richie/Documents/rgkirch/Hacker-HUD/test/myConcreteConnectionTest.cpp:2:
/home/richie/Documents/rgkirch/Hacker-HUD/test/googletest/googlemock/include/gmock/gmock-actions.h:577:39: note:   cannot convert ‘((testing::internal::ReturnAction<testing::PolymorphicAction<testing::internal::InvokeWithoutArgsAction<downloadData_basic_Test::TestBody()::<lambda()> > > >::Impl<testing::PolymorphicAction<testing::internal::InvokeWithoutArgsAction<downloadData_basic_Test::TestBody()::<lambda()> > >, int()>*)this)->testing::internal::ReturnAction<testing::PolymorphicAction<testing::internal::InvokeWithoutArgsAction<downloadData_basic_Test::TestBody()::<lambda()> > > >::Impl<testing::PolymorphicAction<testing::internal::InvokeWithoutArgsAction<downloadData_basic_Test::TestBody()::<lambda()> > >, int()>::value_before_cast_’ (type ‘testing::PolymorphicAction<testing::internal::InvokeWithoutArgsAction<downloadData_basic_Test::TestBody()::<lambda()> > >’) to type ‘int’
           value_(ImplicitCast_<Result>(value_before_cast_)) {}
                                       ^
test/CMakeFiles/hhTest.dir/build.make:137: recipe for target 'test/CMakeFiles/hhTest.dir/myConcreteConnectionTest.cpp.o' failed
make[3]: *** [test/CMakeFiles/hhTest.dir/myConcreteConnectionTest.cpp.o] Error 1
CMakeFiles/Makefile2:456: recipe for target 'test/CMakeFiles/hhTest.dir/all' failed
make[2]: *** [test/CMakeFiles/hhTest.dir/all] Error 2
CMakeFiles/Makefile2:468: recipe for target 'test/CMakeFiles/hhTest.dir/rule' failed
make[1]: *** [test/CMakeFiles/hhTest.dir/rule] Error 2
Makefile:279: recipe for target 'hhTest' failed
make: *** [hhTest] Error 2

